namespace java com.ishangke.edunav.commoncontract.model

/**
 * CategoryBo
 */
struct CategoryBo {
  1: i32 id
}