namespace java com.ishangke.edunav.commoncontract.model

/**
 * CircleBo
 */
struct CircleBo {
  1: i32 id
}